Stage 4: MessageBoard finished and tested (3.6)